armintro/vnet/vnet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetName": {
      "type": "string",
      "defaultValue": "VNet1",
      "metadata": {
        "description": "VNet name"
      }
    },
    "location": {
      "type": "string",
      "metadata": {
        "description": "The location in which the resources should be deployed."
      }
    },
    "bastionSubnet0": {
      "type": "string",
      "defaultValue": "10.0.1.0/27",
      "metadata": {
        "description": "Public Subnet 0"
      }
    },
    "publicSubnet0": {
      "type": "string",
      "defaultValue": "10.0.10.0/24",
      "metadata": {
        "description": "Public Subnet 0"
      }
    },
    "privateSubnet0": {
      "type": "string",
      "defaultValue": "10.0.20.0/24",
      "metadata": {
        "description": "Private Subnet 0"
      }
    },
    "dbSubnet0": {
      "type": "string",
      "defaultValue": "10.0.30.0/24",
      "metadata": {
        "description": "DB Subnet 0"
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-05-01",
      "name": "[parameters('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            //            "[concat(parameters('vnetCIDRPrefix'), '.0.0/16')]"
            "10.0.0.0/16"
          ]
        }
      },
      "resources": [
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "bastionSubnet0",
          "dependsOn": [
            "[parameters('vnetName')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('bastionSubnet0')]",
            "networkSecurityGroup": {
              "name": "bastionNetworkSecurityGroup",
              "location": "[parameters('location')]",
              "dependsOn": [
                "[parameters('vnetName')]"
              ],
              "properties": {
                "securityRules": [
                  {
                    "name": "sshRule",
                    "properties": {
                      "description": "allow all inbound on port 22 (SSH)",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "22",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "rdpRule",
                    "properties": {
                      "description": "allow all inbound on port 3389 (RDP)",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "3389",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Inbound"
                    }
                  }
                ]
              }
            }
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "publicSubnet0",
          "dependsOn": [
            "[parameters('vnetName')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('publicSubnet0')]"
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "privateSubnet0",
          "dependsOn": [
            "[parameters('vnetName')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('privateSubnet0')]"
          }
        },
        {
          "type": "subnets",
          "apiVersion": "2020-05-01",
          "location": "[parameters('location')]",
          "name": "dbSubnet0",
          "dependsOn": [
            "[parameters('vnetName')]"
          ],
          "properties": {
            "addressPrefix": "[parameters('dbSubnet0')]"
          }
        },
        {
          "name": "webNetworkSecurityGroup",
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2019-11-01",
          "location": "[parameters('location')]",
          "dependsOn": [
            "[parameters('vnetName')]"
          ],
          "properties": {
            "securityRules": [
              {
                "name": "httpRule",
                "properties": {
                  "description": "allow all inbound on port 80 (HTTP)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "80",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 100,
                  "direction": "Inbound"
                }
              },
              {
                "name": "rdpRule",
                "properties": {
                  "description": "allow all inbound on port 443 (HTTPS)",
                  "protocol": "Tcp",
                  "sourcePortRange": "*",
                  "destinationPortRange": "443",
                  "sourceAddressPrefix": "*",
                  "destinationAddressPrefix": "*",
                  "access": "Allow",
                  "priority": 110,
                  "direction": "Inbound"
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
